force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/Shipper_Consignee_Detail_SpiceJet__c.object-meta.xml
<CustomObject>
    <label>Shipper/Consignee Detail SpiceJet</label>
    <nameField>
        <label>Shipper/Consignee Detail SpiceJet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipper/Consignee Details SpiceJet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>