force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Consignee_Address__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Address__c</fullName>
    <label>Consignee Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>