force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Consignee_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Airport_Code__c</fullName>
    <label>Consignee Airport Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>