force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Consignee_Code__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Code__c</fullName>
    <label>Consignee Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>