force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Consignee_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Contact_No__c</fullName>
    <label>Consignee Contact No</label>
    <type>Phone</type>
</CustomField>