force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Consignee_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Pincode__c</fullName>
    <label>Consignee Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>