force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Consignee_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Consignee_State_Code__c</fullName>
    <label>Consignee State Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>