force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Address__c</fullName>
    <label>Shipper Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>