force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Airport_Code__c</fullName>
    <label>Shipper Airport Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>