force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_City__c.field-meta.xml
<CustomField>
    <fullName>Shipper_City__c</fullName>
    <label>Shipper City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>