force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Code__c</fullName>
    <label>Shipper Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>