force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Contact_No__c</fullName>
    <label>Shipper Contact No</label>
    <type>Phone</type>
</CustomField>