force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Country_Code__c</fullName>
    <label>Shipper Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>