force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Email__c</fullName>
    <label>Shipper Email</label>
    <type>Email</type>
</CustomField>