force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/fields/Shipper_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Pincode__c</fullName>
    <label>Shipper Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>