force-app/main/default/objects/Shipper_Consignee_Detail_SpiceJet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consignee_City__c</columns>
    <columns>Consignee_Contact_No__c</columns>
    <columns>Consignee_Email__c</columns>
    <columns>Consignee_Name__c</columns>
    <columns>Shipper_Address__c</columns>
    <columns>Shipper_City__c</columns>
    <columns>Shipper_Contact_No__c</columns>
    <columns>Shipper_Email__c</columns>
    <columns>Shipper_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>